Tests/bad/myBadTests/void_coparisson.lat
// porownywanie typu void
int main(){
    if(foo()==boo()){
        printString("Aha");
    }
    return 0;
}


void foo(){
    printString("abc");
}

void boo(){
    printString("efg");
}
